--- a/MPDroid/src/main/res/layout/main_fragment_port.xml
+++ b/MPDroid/src/main/res/layout/main_fragment_port.xml
@@ -35,6 +35,7 @@
             android:layout_height="fill_parent"
             android:layout_centerInParent="true"
             android:scaleType="fitCenter"
+            android:transitionName="cover"
             android:src="@drawable/no_cover_art_big" />
 
         <ProgressBar
