--- a/MPDroid/src/main/res/layout/now_playing_small_fragment.xml
+++ b/MPDroid/src/main/res/layout/now_playing_small_fragment.xml
@@ -37,6 +37,7 @@
                 android:id="@+id/albumCover"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                android:transitionName="cover"
                 android:contentDescription="@string/albumCover"
                 android:scaleType="fitCenter"
                 android:src="?attr/noCoverArtIcon" />
