Fix transition for landscape

--- a/MPDroid/src/main/res/layout/main_fragment_land.xml
+++ b/MPDroid/src/main/res/layout/main_fragment_land.xml
@@ -44,6 +44,7 @@
                 android:layout_height="fill_parent"
                 android:layout_centerVertical="true"
                 android:scaleType="fitCenter"
+                android:transitionName="cover"
                 android:src="@drawable/no_cover_art_big" />
 
             <ProgressBar
