Material queue, using guidelines. Looks weird.

--- a/MPDroid/src/main/res/layout/playlist_activity.xml
+++ b/MPDroid/src/main/res/layout/playlist_activity.xml
@@ -34,6 +34,7 @@
         android:layout_width="fill_parent"
         android:layout_height="0dip"
         android:layout_weight="1"
+        android:divider="@null"
         android:drawSelectorOnTop="false"
         android:fastScrollEnabled="true"
         dslv:collapsed_height="2dp"
