--- a/MPDroid/src/main/res/layout/main_activity_nagvigation.xml
+++ b/MPDroid/src/main/res/layout/main_activity_nagvigation.xml
@@ -25,37 +25,35 @@
 
     <LinearLayout
         android:id="@+id/content_frame"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:paddingTop="?android:attr/actionBarSize">
+        android:layout_height="match_parent">
 
             <FrameLayout
-                android:id="@+id/library_root_frame"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="visible" />
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:paddingTop="?attr/actionBarSize">
 
-            <FrameLayout
-                android:id="@+id/outputs_root_frame"
+                <FrameLayout
+                    android:id="@+id/library_root_frame"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="visible" />
+
+                <FrameLayout
+                    android:id="@+id/outputs_root_frame"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
+            </FrameLayout>
+
+            <fragment
+                android:id="@+id/now_playing_small_fragment"
+                android:name="com.namelessdev.mpdroid.fragments.NowPlayingSmallFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone" />
-        </FrameLayout>
-
-        <fragment
-            android:id="@+id/now_playing_small_fragment"
-            android:name="com.namelessdev.mpdroid.fragments.NowPlayingSmallFragment"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/nowplaying_small_fragment_height"
-            tools:layout="@layout/now_playing_small_fragment" />
-
+                android:layout_height="@dimen/nowplaying_small_fragment_height"
+                tools:layout="@layout/now_playing_small_fragment" />
 
     </LinearLayout>
     <!-- The navigation drawer -->
