--- a/MPDroid/src/main/res/layout/album_grid_item.xml
+++ b/MPDroid/src/main/res/layout/album_grid_item.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (C) 2010-2015 The MPDroid Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,65 +15,73 @@
   ~ limitations under the License.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    android:id="@+id/card_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/cardBackground"
-    android:paddingBottom="10dp">
+    card_view:cardUseCompatPadding="true"
+    card_view:cardBackgroundColor="?attr/cardBackground">
 
-    <com.namelessdev.mpdroid.ui.SquareImageView
-        android:id="@+id/albumCover"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:paddingTop="1dip"
-        android:scaleType="centerCrop"
-        android:src="?attr/noCoverArtIcon" />
+        android:paddingBottom="10dp">
 
-    <ProgressBar
-        android:id="@+id/albumCoverProgress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/albumCover"
-        android:layout_alignRight="@+id/albumCover"
-        android:layout_centerInParent="true"
-        android:visible="false" />
+        <com.namelessdev.mpdroid.ui.SquareImageView
+            android:id="@+id/albumCover"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
+            android:src="?attr/noCoverArtIcon" />
 
-    <TextView
-        android:id="@+id/album_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/albumCover"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
-        android:singleLine="true"
-        android:textColor="?attr/cardPrimaryTextColor" />
+        <ProgressBar
+            android:id="@+id/albumCoverProgress"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/albumCover"
+            android:layout_alignRight="@+id/albumCover"
+            android:layout_centerInParent="true"
+            android:visible="false" />
 
-    <TextView
-        android:id="@+id/album_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/album_name"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:singleLine="true" />
+        <TextView
+            android:id="@+id/album_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/albumCover"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:singleLine="true"
+            android:textColor="?attr/cardPrimaryTextColor" />
 
-    <!--<ImageButton
-        android:id="@+id/menu"
-        android:layout_width="40dip"
-        android:layout_height="40dip"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/album_name"
-        android:background="@null"
-        android:src="@drawable/ic_menu_moreoverflow_card" />-->
+        <TextView
+            android:id="@+id/album_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/album_name"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:singleLine="true" />
 
-</RelativeLayout>
+        <!--<ImageButton
+            android:id="@+id/menu"
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/album_name"
+            android:background="@null"
+            android:src="@drawable/ic_menu_moreoverflow_card" />-->
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
