--- a/MPDroid/src/main/res/values/attrs.xml
+++ b/MPDroid/src/main/res/values/attrs.xml
@@ -43,6 +43,7 @@
         <attr name="volumeIcon" format="reference" />
         <attr name="playQueueIcon" format="reference" />
         <attr name="overflowButton" format="reference" />
+        <attr name="listItemSecondaryTextColor" format="color" />
     </declare-styleable>
 
 </resources>
