--- a/MPDroid/src/main/res/values/styles.xml
+++ b/MPDroid/src/main/res/values/styles.xml
@@ -69,6 +69,7 @@
         <item name="android:colorBackgroundCacheHint">@color/nowplaying_background</item>
         <item name="android:colorBackground">@color/nowplaying_background</item>
         <item name="listItemSecondaryTextColor">@color/list_item_secondary_text_color</item>
+        <item name="toolbarPopupTheme">@style/ThemeOverlay.AppCompat</item>
     </style>
 
     <style name="AppTheme.Light" parent="@style/AppThemeBase.Light">
@@ -106,6 +107,7 @@
         <item name="playQueueIcon">@drawable/ic_action_play_queue_light</item>
         <item name="overflowButton">@android:style/Widget.Holo.Light.ActionButton.Overflow</item>
         <item name="listItemSecondaryTextColor">@color/list_item_secondary_text_color_light</item>
+        <item name="toolbarPopupTheme">@style/ThemeOverlay.AppCompat.Light</item>
     </style>
 
     <style name="AppTheme.Settings" parent="@style/AppTheme.Light"></style>
