--- a/MPDroid/src/main/res/values/attrs.xml
+++ b/MPDroid/src/main/res/values/attrs.xml
@@ -44,6 +44,7 @@
         <attr name="playQueueIcon" format="reference" />
         <attr name="overflowButton" format="reference" />
         <attr name="listItemSecondaryTextColor" format="color" />
+        <attr name="toolbarPopupTheme" format="reference" />
     </declare-styleable>
 
 </resources>
