--- a/MPDroid/src/main/res/layout/main_activity_nagvigation.xml
+++ b/MPDroid/src/main/res/layout/main_activity_nagvigation.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (C) 2010-2015 The MPDroid Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,58 +15,25 @@
   ~ limitations under the License.
   -->
 
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
+<LinearLayout
+    android:id="@+id/content_frame"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <!-- The main content view -->
-
-    <LinearLayout
-        android:id="@+id/content_frame"
-        android:orientation="vertical"
+    <FrameLayout
+        android:id="@+id/library_root_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1">
-
-                <FrameLayout
-                    android:id="@+id/library_root_frame"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible" />
-
-                <FrameLayout
-                    android:id="@+id/outputs_root_frame"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone" />
-            </FrameLayout>
-
-            <fragment
-                android:id="@+id/now_playing_small_fragment"
-                android:name="com.namelessdev.mpdroid.fragments.NowPlayingSmallFragment"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/nowplaying_small_fragment_height"
-                tools:layout="@layout/now_playing_small_fragment" />
-
-    </LinearLayout>
-    <!-- The navigation drawer -->
-
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:paddingTop="?android:actionBarSize" />
+        android:visibility="visible" />
 
-</android.support.v4.widget.DrawerLayout>
+    <fragment
+        android:id="@+id/now_playing_small_fragment"
+        android:name="com.namelessdev.mpdroid.fragments.NowPlayingSmallFragment"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/nowplaying_small_fragment_height"
+        tools:layout="@layout/now_playing_small_fragment" />
+
+</LinearLayout>
