Change small player hitbox

--- a/MPDroid/src/main/res/layout/main_activity_nagvigation.xml
+++ b/MPDroid/src/main/res/layout/main_activity_nagvigation.xml
@@ -26,7 +26,8 @@
     <FrameLayout
         android:id="@+id/library_root_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
         android:visibility="visible" />
 
     <fragment
