--- a/MPDroid/src/main/res/layout/now_playing_small_fragment.xml
+++ b/MPDroid/src/main/res/layout/now_playing_small_fragment.xml
@@ -21,6 +21,7 @@
     android:orientation="horizontal">
 
     <RelativeLayout
+        android:id="@+id/songInfoLayout"
         android:layout_width="0dip"
         android:layout_height="48dip"
         android:layout_weight="1">
