--- a/MPDroid/src/main/res/layout/activity_now_playing.xml
+++ b/MPDroid/src/main/res/layout/activity_now_playing.xml
@@ -35,5 +35,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        tools:layout="@layout/playlist_activity" />
+        tools:layout="@layout/queue_fragment" />
 </android.support.v4.view.ViewPager>
