--- a/MPDroid/src/main/res/layout/browse.xml
+++ b/MPDroid/src/main/res/layout/browse.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (C) 2010-2015 The MPDroid Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,12 +15,11 @@
   ~ limitations under the License.
   -->
 
-<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
-    android:id="@+id/pullToRefresh"
+<FrameLayout
+    android:id="@+id/browse_root_frame"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:layout_height="fill_parent">
 
     <ListView
         android:id="@+id/list"
@@ -66,4 +66,4 @@
             android:text="@string/no_result" />
     </ScrollView>
 
-</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+</FrameLayout>
