--- a/MPDroid/src/main/res/menu/mpd_searchmenu.xml
+++ b/MPDroid/src/main/res/menu/mpd_searchmenu.xml
@@ -20,5 +20,6 @@
         android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
         android:orderInCategory="2"
         app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="@string/search" />
 </menu>
