Fix rebase issue

--- a/MPDroid/src/main/res/menu/menu_now_playing.xml
+++ b/MPDroid/src/main/res/menu/menu_now_playing.xml
@@ -16,7 +16,8 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.namelessdev.mpdroid.NowPlayingActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/action_settings" android:title="@string/settings"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
